@@ -1,3 +1,10 @@
+2019-02-16  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
+	imap-mbox-handle: Do not leak a GNode tree
+
+	* libbalsa/imap/imap-handle.c (imap_mbox_handle_finalize):
+	destroy the thread-root GNode tree.
+
 2018-02-15  Albrecht Dreß  <albrecht.dress@arcor.de>
 
 	Relax secret key selection
